fixes dropdown error state styling in form control

--- a/src/components/FormControl/FormControl.scss
+++ b/src/components/FormControl/FormControl.scss
@@ -21,7 +21,8 @@
     }
 
     textarea.mainsail-textarea.error,
-    input.mainsail-input.error {
+    input.mainsail-input.error,
+    .mainsail-dropdown.error button {
         border: 1px solid $mainsail-input-border-error;
     }
 
