adds important to listgroup item hover state

--- a/src/components/ListGroup/ListGroup.scss
+++ b/src/components/ListGroup/ListGroup.scss
@@ -17,6 +17,7 @@ a.mainsail-listgroup-item {
     &:focus {
         background: $mainsail-blue-light;
         outline: none;
+        text-decoration: none !important;
     }
 
     &.active {
