removes important tag (added to help override global clobber in zephyr)
- adjusting this in Zephyr global will help Button component accept utility classes better

--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -18,7 +18,7 @@ button.mainsail-button {
     border: 1px solid transparent;
     border-radius: $mainsail-button-border-radius;
     box-shadow: $mainsail-shadow-near;
-    padding: 10px !important;
+    padding: 10px;
     cursor: pointer;
     min-width: auto;
 
