--- a/src/styles/Layout.scss
+++ b/src/styles/Layout.scss
@@ -295,6 +295,14 @@
     flex-grow: 0;
     flex-shrink: 0;
 
+    &.wrap {
+        flex-wrap: wrap;
+    }
+
+    &.wrap-reverse {
+        flex-wrap: wrap-reverse;
+    }
+
     &.align-start {
         align-items: flex-start;
     }
