adds two units to space/size scale

--- a/src/styles/Utility.scss
+++ b/src/styles/Utility.scss
@@ -391,7 +391,9 @@
 /* Spacing Utility Generators */
 $spacing: (
     0: 0,
+    2: 2px,
     4: 4px,
+    6: 6px,
     8: 8px,
     10: 10px,
     12: 12px,
