--- a/src/components/PopMenu/PopMenu.scss
+++ b/src/components/PopMenu/PopMenu.scss
@@ -30,18 +30,51 @@
             padding-right: 14px;
             cursor: pointer;
 
+            &.dark {
+                color: $mainsail-blue-dark;
+                svg {
+                    color: $mainsail-blue-dark;
+                }
+            }
+
+            &.default {
+                color: $mainsail-blue-primary;
+                svg {
+                    color: $mainsail-blue-primary;
+                }
+            }
+
             &:hover {
                 background-color: $mainsail-blue-primary;
                 color: $mainsail-white;
+
+                svg {
+                    color: $mainsail-white;
+                }
             }
+        }
+
+        .mainsail-pop-menu__header {
+            @include mainsail-label-text-small;
+            color: $mainsail-neutral-3;
+            text-transform: uppercase;
+            letter-spacing: 0.04em;
+            margin: 0;
+            padding: 4px 14px;
         }
 
         hr {
             appearance: none;
             margin: 0;
+            margin-top: 6px;
+            margin-bottom: 6px;
             width: 100%;
             border: none;
             border-top: 1px solid $mainsail-neutral-5;
+        }
+
+        .mainsail-icon {
+            margin-right: 8px;
         }
     }
 }
