--- a/src/styles/Layout.scss
+++ b/src/styles/Layout.scss
@@ -270,9 +270,38 @@
     max-width: 1400px;
 }
 
+/* Sizing */
+
 .w-full {
     width: 100% !important;
 }
+.w-screen {
+    width: 100vw !important;
+}
+.w-3\/4 {
+    width: 75% !important;
+}
+.w-1\/4 {
+    width: 25% !important;
+}
+.w-1\/2 {
+    width: 50% !important;
+}
+.w-1\/3 {
+    width: 33.33% !important;
+}
+.w-2\/3 {
+    width: 66.66% !important;
+}
+
+.h-full {
+    height: 100% !important;
+}
+.h-screen {
+    height: 100vh !important;
+}
+
+/* End Sizing */
 
 /* Shadows */
 
