fixes formcontrol dropdown items button style when invalid

--- a/src/components/FormControl/FormControl.scss
+++ b/src/components/FormControl/FormControl.scss
@@ -22,7 +22,7 @@
 
     textarea.mainsail-textarea.error,
     input.mainsail-input.error,
-    .mainsail-dropdown.error button {
+    .mainsail-dropdown.error > button {
         border: 1px solid $mainsail-input-border-error;
     }
 
