--- a/src/components/Dropdown/Dropdown.scss
+++ b/src/components/Dropdown/Dropdown.scss
@@ -79,7 +79,7 @@
         display: flex;
         flex-direction: column;
         overflow: hidden;
-        min-width: 100%;
+        width: 100%;
         max-height: 300px !important;
         overflow-y: auto;
         border-radius: $mainsail-input-border-radius;
