--- a/src/components/Transition/Transition.scss
+++ b/src/components/Transition/Transition.scss
@@ -52,6 +52,31 @@
     transform: translateY(0%);
 }
 
+.ms-fade-slide-up-enter,
+.ms-fade-slide-up-appear {
+    opacity: 0;
+    transform: translateY(30%);
+}
+.ms-fade-slide-up-enter-active,
+.ms-fade-slide-up-appear-active,
+.ms-fade-slide-up-appear-done {
+    opacity: 1;
+    transform: translateY(0%);
+    transition: opacity 300ms, transform 300ms;
+}
+.ms-fade-slide-up-exit {
+    opacity: 1;
+}
+.ms-fade-slide-up-exit-active {
+    opacity: 0;
+    transform: translateY(30%);
+    transition: opacity 300ms, transform 300ms;
+}
+.ms-fade-slide-up-exit-done {
+    opacity: 0;
+    transform: translateY(0%);
+}
+
 // Fade and Slide Right
 .ms-fade-slide-right-enter,
 .ms-fade-slide-right-appear {
