--- a/src/components/Modal/Modal.scss
+++ b/src/components/Modal/Modal.scss
@@ -32,7 +32,7 @@
     .mainsail-modal-content {
         background-color: $mainsail-white;
         min-height: 250px;
-        max-width: 80%;
+
         max-height: 80%;
         box-shadow: $mainsail-shadow-far;
         border-radius: $mainsail-modal-radius;
@@ -89,10 +89,12 @@
 
         .mainsail-modal-body {
             @include mainsail-body-text-regular;
+            position: relative;
             flex-grow: 1;
             padding: 20px;
             overflow-y: auto;
             overflow-x: hidden;
+            min-height: 200px;
             max-height: calc(80% - 150px); // 150 = head + foot
 
             &.no-padding {
