--- a/src/components/Modal/Modal.scss
+++ b/src/components/Modal/Modal.scss
@@ -123,7 +123,7 @@
     }
 
     &.mobile-fullscreen {
-        @include sm-size-down {
+        @include md-size-down {
             &.open {
                 align-items: flex-end;
             }
