--- a/docs/src/pages/index.module.css
+++ b/docs/src/pages/index.module.css
@@ -13,6 +13,11 @@
     background-color: #055484;
 }
 
+.mainLogo {
+    filter: drop-shadow(0px 0px 66px white);
+    width: 70%;
+}
+
 @media screen and (max-width: 966px) {
     .heroBanner {
         padding: 2rem;
