--- a/docs/src/pages/index.module.css
+++ b/docs/src/pages/index.module.css
@@ -11,10 +11,20 @@
     position: relative;
     overflow: hidden;
     background-color: #055484;
+    background: rgb(131, 58, 180);
+    background: linear-gradient(
+        90deg,
+        rgba(131, 58, 180, 1) 0%,
+        rgba(253, 29, 29, 1) 50%,
+        rgba(252, 176, 69, 1) 100%
+    );
+    background: url("/img/ocean.jpeg");
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .mainLogo {
-    filter: drop-shadow(0px 0px 66px white);
+    filter: drop-shadow(0px 0px 46px white);
     width: 70%;
 }
 
