--- a/src/components/core/index.scss
+++ b/src/components/core/index.scss
@@ -6,6 +6,7 @@
 @import "../../styles/Text.scss";
 
 // SASS Global Import for plopjs
+@import "../Avatar/Avatar.scss";
 @import "../SearchInput/SearchInput.scss";
 @import "../ProgressBar/ProgressBar.scss";
 @import "../Switcher/Switcher.scss";
