adds some extra flex niceness

--- a/src/styles/Layout.scss
+++ b/src/styles/Layout.scss
@@ -382,6 +382,23 @@
     .flex-shrink {
         flex-shrink: 1;
     }
+
+    .flex-1,
+    &.flex-1 {
+        flex: 1;
+    }
+    .flex-2,
+    &.flex-2 {
+        flex: 1;
+    }
+    .flex-3,
+    &.flex-3 {
+        flex: 1;
+    }
+    .flex-4,
+    &.flex-4 {
+        flex: 4;
+    }
 }
 
 .relative {
